[package]
name = "ean"
description = "A Rust library that can convert Western Arabic Numerals to Eastern Arabic Numerals"
homepage = "https://github.com/0x1eef/ean/blob/master/rust#readme"
repository = "https://github.com/0x1eef/ean/blob/master/rust#readme"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
